[tool.poetry]
name = "datadis"
version = "0.6.0"
description = "Datadis API client"
readme = "README.md"
authors = ["Alvaro Tinoco <alvarotinocomarmol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry && poetry build"
